[build-system]
requires = ["setuptools>=64", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfzz"
version = "1.0.0"
description = "Fast computation of zigzag persistence (Python bindings)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    {name = "Tao Hou"},
    {name = "Soham Mukherjee"},
]
keywords = ["topology", "persistent homology", "zigzag persistence", "TDA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Paper = "https://arxiv.org/pdf/2204.11080.pdf"
